// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`my account page renders 1`] = `
<Fragment>
  <header
    className="clearfix mb2 px2 py1 bg-white"
  >
    <div
      className="left"
    >
      <Link
        className="btn px0 bold caps"
        replace={false}
        to="/"
      >
        CMS HITECH APD
      </Link>
    </div>
  </header>
  <div
    className="ds-l-col--5 ds-u-fill--white ds-u-margin-x--auto ds-u-margin-y--3 ds-u-padding--6 ds-u-radius"
  >
    <div
      className="ds-u-margin-x--auto"
      style={
        Object {
          "maxWidth": "460px",
        }
      }
    >
      <h1
        className="ds-h1"
      >
        Manage account
      </h1>
      <form
        onSubmit={[Function]}
      >
        <TextField
          label="Name"
          name="name"
          onChange={[Function]}
          type="text"
          value="Tina Belcher"
        />
        <TextField
          label="Phone number"
          mask="phone"
          name="phone"
          onChange={[Function]}
          size="medium"
          type="text"
          value="1-800-BURGERS"
        />
        <TextField
          label="Position"
          name="position"
          onChange={[Function]}
          type="text"
          value="Table Cleaner"
        />
        <Password
          className="mb2"
          compareTo={Array []}
          onChange={[Function]}
          title="Change password"
          value=""
        />
        <Button
          disabled={false}
          type="submit"
          variation="primary"
        >
          Save changes
        </Button>
        <Button
          onClick={[Function]}
          type="button"
          variation="transparent"
        >
          Cancel
        </Button>
      </form>
    </div>
  </div>
</Fragment>
`;

exports[`my account page renders 2`] = `
<Fragment>
  <header
    className="clearfix mb2 px2 py1 bg-white"
  >
    <div
      className="left"
    >
      <Link
        className="btn px0 bold caps"
        replace={false}
        to="/"
      >
        CMS HITECH APD
      </Link>
    </div>
  </header>
  <div
    className="ds-l-col--5 ds-u-fill--white ds-u-margin-x--auto ds-u-margin-y--3 ds-u-padding--6 ds-u-radius"
  >
    <div
      className="ds-u-margin-x--auto"
      style={
        Object {
          "maxWidth": "460px",
        }
      }
    >
      <h1
        className="ds-h1"
      >
        Manage account
      </h1>
      <form
        onSubmit={[Function]}
      >
        <TextField
          label="Name"
          name="name"
          onChange={[Function]}
          type="text"
          value="Tina Belcher"
        />
        <TextField
          label="Phone number"
          mask="phone"
          name="phone"
          onChange={[Function]}
          size="medium"
          type="text"
          value="1-800-BURGERS"
        />
        <TextField
          label="Position"
          name="position"
          onChange={[Function]}
          type="text"
          value="Window Washer"
        />
        <Password
          className="mb2"
          compareTo={Array []}
          onChange={[Function]}
          title="Change password"
          value=""
        />
        <Button
          disabled={false}
          type="submit"
          variation="primary"
        >
          Save changes
        </Button>
        <Button
          onClick={[Function]}
          type="button"
          variation="transparent"
        >
          Cancel
        </Button>
      </form>
    </div>
  </div>
</Fragment>
`;

exports[`my account page renders 3`] = `
<Fragment>
  <header
    className="clearfix mb2 px2 py1 bg-white"
  >
    <div
      className="left"
    >
      <Link
        className="btn px0 bold caps"
        replace={false}
        to="/"
      >
        CMS HITECH APD
      </Link>
    </div>
  </header>
  <div
    className="ds-l-col--5 ds-u-fill--white ds-u-margin-x--auto ds-u-margin-y--3 ds-u-padding--6 ds-u-radius"
  >
    <div
      className="ds-u-margin-x--auto"
      style={
        Object {
          "maxWidth": "460px",
        }
      }
    >
      <h1
        className="ds-h1"
      >
        Manage account
      </h1>
      <form
        onSubmit={[Function]}
      >
        <TextField
          label="Name"
          name="name"
          onChange={[Function]}
          type="text"
          value="Tina Belcher"
        />
        <TextField
          label="Phone number"
          mask="phone"
          name="phone"
          onChange={[Function]}
          size="medium"
          type="text"
          value="1-800-BURGERS"
        />
        <TextField
          label="Position"
          name="position"
          onChange={[Function]}
          type="text"
          value="Table Cleaner"
        />
        <Password
          className="mb2"
          compareTo={Array []}
          onChange={[Function]}
          title="Change password"
          value=""
        />
        <Button
          disabled={true}
          type="submit"
          variation="primary"
        >
          <Spinner
            aria-valuetext="Loading"
            role="progressbar"
          />
           Working
        </Button>
        <Button
          onClick={[Function]}
          type="button"
          variation="transparent"
        >
          Cancel
        </Button>
      </form>
    </div>
  </div>
</Fragment>
`;
